// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> accepts "anchor" modifier prop 1`] = `
<button
  className="gh-btn gh-btn--anchor"
  type="button"
>
  Click me
</button>
`;

exports[`<Button /> accepts "anchor-block" modifier prop 1`] = `
<button
  className="gh-btn gh-btn--anchor-block"
  type="button"
>
  Click me
</button>
`;

exports[`<Button /> accepts "disabled" prop 1`] = `
<button
  className="gh-btn gh-btn--primary gh-btn--disabled"
  type="button"
>
  Click me
</button>
`;

exports[`<Button /> accepts "l" size prop 1`] = `
<button
  className="gh-btn gh-btn--l"
  type="button"
>
  Click me
</button>
`;

exports[`<Button /> accepts "primary" modifier prop 1`] = `
<button
  className="gh-btn gh-btn--primary"
  type="button"
>
  Click me
</button>
`;

exports[`<Button /> accepts "s" size prop 1`] = `
<button
  className="gh-btn gh-btn--s"
  type="button"
>
  Click me
</button>
`;

exports[`<Button /> accepts "secondary" modifier prop 1`] = `
<button
  className="gh-btn gh-btn--secondary"
  type="button"
>
  Click me
</button>
`;

exports[`<Button /> accepts "xl" size prop 1`] = `
<button
  className="gh-btn gh-btn--xl"
  type="button"
>
  Click me
</button>
`;

exports[`<Button /> accepts "xs" size prop 1`] = `
<button
  className="gh-btn gh-btn--xs"
  type="button"
>
  Click me
</button>
`;

exports[`<Button /> renders correctly 1`] = `
<button
  className="gh-btn"
  type="button"
>
  Click me
</button>
`;
